k8s/infra/network/pocket-id/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: pocket-id
  labels:
    app.kubernetes.io/name: pocket-id
    app.kubernetes.io/instance: pocket-id
spec:
  selector:
    app.kubernetes.io/name: pocket-id
    app.kubernetes.io/instance: pocket-id
  ports:
    - name: http
      protocol: TCP
      port: 1411
      targetPort: 1411
  type: ClusterIP
