k8s/infra/network/pocket-id/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
  namespace: pocket-id
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - auth.schaermu.ch
  rules:
    - backendRefs:
        - name: pocket-id
          port: 1411
      matches:
        - path:
            type: PathPrefix
            value: /
